--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.9",
     "@angular/router": "~12.2.9",
     "ngx-autofocus-fix": "^1.0.4",
+    "ngx-skeleton-loader": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
